Picture-in-picture is broken if srcObject is video stream (Safari 17 on macOS 14) https://bugs.webkit.org/show_bug.cgi?id=262479 rdar://116465668

Reviewed by Andy Estes.

We have to implement MediaPlayerPrivate::requestHostingContextID to ensure the full screen setup is done in a timely manner.
Otherwise, we do half of the pip procedure without terminating it.

Manullay tested with https://bug-262479-attachments.webkit.org/attachment.cgi?id=468022.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::layersAreInitialized):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::requestHostingContextID):

Canonical link: https://commits.webkit.org/269403@main